--- a/AgentClient/pom.xml
+++ b/AgentClient/pom.xml
@@ -51,7 +51,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>men.brakh.AgentClient</Main-Class>
+                                        <Main-Class>men.brakh.agent.AgentClient</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
