--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -50,7 +50,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>men.brakh.Server</Main-Class>
+                                        <Main-Class>men.brakh.server.Server</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
