--- a/Chat/pom.xml
+++ b/Chat/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>men.brakh</groupId>
     <artifactId>Chat</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
@@ -54,6 +54,7 @@
 
                                 </transformer>
                             </transformers>
+                            <minimizeJar>true</minimizeJar>
                         </configuration>
                     </execution>
                 </executions>
