--- a/CustomerClient/pom.xml
+++ b/CustomerClient/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>men.brakh</groupId>
     <artifactId>CustomerClient</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>men.brakh</groupId>
             <artifactId>Chat</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
@@ -55,6 +55,7 @@
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
+                            <minimizeJar>true</minimizeJar>
                         </configuration>
                     </execution>
                 </executions>
