--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>men.brakh</groupId>
     <artifactId>Server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>men.brakh</groupId>
             <artifactId>Chat</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -54,6 +54,7 @@
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
+                            <minimizeJar>true</minimizeJar>
                         </configuration>
                     </execution>
                 </executions>
