--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -13,7 +13,7 @@
     <groupId>men.brakh</groupId>
     <artifactId>Server</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
